<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_note"
        android:icon="@drawable/ic_baseline_note_add_24"
        android:orderInCategory="2"
        android:title="@string/menu_add_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_baseline_sort_by_alpha_24"
        android:orderInCategory="3"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_baseline_send_24"
        android:orderInCategory="4"
        android:title="@string/menu_send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_photo"
        android:icon="@drawable/ic_baseline_add_photo_alternate_24"
        android:orderInCategory="5"
        android:title="@string/menu_add_photo"
        app:showAsAction="ifRoom" />
</menu>